[package]
name = "sendinginblue"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["sendinblue", "api"]
categories = ["web-programming", "api-bindings"]
description = "SendinBlue API"
repository = "https://github.com/apibillme/sendinginblue"
readme = "README.md"

[dependencies]
